# f2c

./: CMakeLists.txt
config_aux/: config_cmake.h.in
include/: CMakeLists.txt  f2c.h  f2c_types_cmake.h.in
lib/: CMakeLists.txt
src/: CMakeLists.txt
